bug fix: cover list of pindans title overflowing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -197,6 +197,9 @@
     }
 
     .heading-area {
+        .avatar-container {
+            float: left;
+        }
         img.avatar {
             display: inline-block;
             width: 40px;
@@ -208,8 +211,8 @@
             font-size: 20px;
             font-weight: 400;
             color: #505050;
-            display: inline-block;
-            padding: 0 0 0 10px;
+            display: block;
+            padding: 0 0 0 55px;
             a {
                 &:hover {
                 }
